# CMakeOpenGlImGuiTemplate

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md
app/: CMakeLists.txt  main.cpp
cmake/: glad.cmake  imgui.cmake  project_defaults.cmake  project_dependencies.cmake
framework/: CMakeLists.txt  application.cpp  application.hpp  image.cpp  image.hpp  logging.hpp
src/: CMakeLists.txt  application.cpp  application.hpp  main.cpp
tests/: CMakeLists.txt  basic_tests.cpp
